--- a/.github/workflows/verify-homework.yml
+++ b/.github/workflows/verify-homework.yml
@@ -238,6 +238,7 @@ jobs:
         if: always() && steps.changed-files.outputs.any_changed == 'true' && steps.validate-files.outputs.valid == 'true' && steps.run-tests.outputs.all_passed == 'true'
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const fs = require('fs');
             const commentBody = fs.readFileSync('/tmp/comment_body.md', 'utf8');
@@ -253,6 +254,7 @@ jobs:
         if: always() && steps.changed-files.outputs.any_changed == 'true' && steps.validate-files.outputs.valid == 'false'
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const invalidFiles = process.env.INVALID_FILES;
             
@@ -282,6 +284,7 @@ jobs:
         if: always() && steps.changed-files.outputs.any_changed == 'true' && steps.validate-files.outputs.valid == 'true' && steps.run-tests.outputs.all_passed == 'false'
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const fs = require('fs');
             const commentBody = fs.readFileSync('/tmp/comment_body.md', 'utf8');
